--- a/pruapp/templates/1/anime.html
+++ b/pruapp/templates/1/anime.html
@@ -155,11 +155,11 @@
   <nav>
     <ul>
       <li><a href="{% url 'plantilla' %}">INICIO</a></li>
-      <li><a href="#">ANIME ▼</a></li>
+      <li><a href="{% url 'formulario' %}">Formulario ▼</a></li>
       <li><a href="#">MANGA</a></li>
       <li><a href="#">JAPONÉS</a></li>
       <li><a href="#">MÚSICA</a></li>
-      <li><a href="#">CULTURA</a></li>
+      <li><a href="#">CULTURA</a></li>  
       <li><a href="#">JUEGOS</a></li>
       <li><a href="#">RESEÑAS</a></li>
       <li><a href="#">STREAMING</a></li>
